--- a/ML_Internship_Module_1.ipynb
+++ b/ML_Internship_Module_1.ipynb
@@ -5921,8 +5921,8 @@
     }
    ],
    "source": [
-    "data.groupby(data.Trend).mean()['Total Traded Quantity']\n",
-    "data.groupby(data.Trend).median()['Total Traded Quantity']"
+    "data.groupby(data.Trend).mean()['Total Traded Quantity'] #Calculation of mean value for Total Traded Quantity\n",
+    "data.groupby(data.Trend).median()['Total Traded Quantity'] #Calculation of median value for Total Traded Quantity"
    ]
   },
   {
@@ -5945,7 +5945,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('Module1Solution.csv')"
+    "data.to_csv('Module1Solution.csv') #Save the dataset."
    ]
   }
  ],
