--- a/ML_Internship_Module_1.ipynb
+++ b/ML_Internship_Module_1.ipynb
@@ -33,8 +33,7 @@
     "#Importing libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import datetime\n",
-    "pd.options.mode.chained_assignment = None"
+    "import datetime"
    ]
   },
   {
