--- a/ML_Internship_Module_1.ipynb
+++ b/ML_Internship_Module_1.ipynb
@@ -33,8 +33,7 @@
     "#Importing libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import datetime\n",
-    "pd.options.mode.chained_assignment = None"
+    "import datetime"
    ]
   },
   {
@@ -4136,15 +4135,15 @@
    "metadata": {},
    "source": [
     "Add another column 'Trend' whose values are:\n",
-    "'Slight or No change' for 'Day_Perc_Change' in between -0.5 and 0.5\n",
-    "'Slight positive' for 'Day_Perc_Change' in between 0.5 and 1\n",
-    "'Slight negative' for 'Day_Perc_Change' in between -0.5 and -1\n",
-    "'Positive' for 'Day_Perc_Change' in between 1 and 3\n",
-    "'Negative' for 'Day_Perc_Change' in between -1 and -3\n",
-    "'Among top gainers' for 'Day_Perc_Change' in between 3 and 7\n",
-    "'Among top losers' for 'Day_Perc_Change' in between -3 and -7\n",
-    "'Bull run' for 'Day_Perc_Change' >7\n",
-    "'Bear drop' for 'Day_Perc_Change' <-7"
+    "1. 'Slight or No change' for 'Day_Perc_Change' in between -0.5 and 0.5\n",
+    "2. 'Slight positive' for 'Day_Perc_Change' in between 0.5 and 1\n",
+    "3. 'Slight negative' for 'Day_Perc_Change' in between -0.5 and -1\n",
+    "4. 'Positive' for 'Day_Perc_Change' in between 1 and 3\n",
+    "5. 'Negative' for 'Day_Perc_Change' in between -1 and -3\n",
+    "6. 'Among top gainers' for 'Day_Perc_Change' in between 3 and 7\n",
+    "7. 'Among top losers' for 'Day_Perc_Change' in between -3 and -7\n",
+    "8. 'Bull run' for 'Day_Perc_Change' >7\n",
+    "9. 'Bear drop' for 'Day_Perc_Change' <-7"
    ]
   },
   {
